Crafting recipes img added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input type="text" class="input-search-items"><button class="card-submit-items">Search</button>
                     </div>
                     <div class="show-place">
-                        <img src="" alt="minecraft" class="img-mc-items">
+                        <img src="" alt="" class="img-mc-items">
                         <p class="card-text-items"></p>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                         <input type="text" class="input-search-block"><button class="card-submit-block">Search</button>
                     </div>
                     <div class="show-place">
-                        <img src="" alt="minecraft" class="img-mc-block">
+                        <img src="" alt="" class="img-mc-block">
                         <p class="card-text-block"></p>
                     </div>
                 </div>
@@ -48,15 +48,15 @@
                     </div>
                     <div class="show-place">
                         <div class="crafting">
-                            <div class="field field-one"></div>
-                            <div class="field field-two"></div>
-                            <div class="field field-three"></div>
-                            <div class="field field-four"></div>
-                            <div class="field field-five"></div>
-                            <div class="field field-six"></div>
-                            <div class="field field-seven"></div>
-                            <div class="field field-eight"></div>
-                            <div class="field field-nine"></div>
+                            <div class="field "><img src="" alt="" class="field-one"></div>
+                            <div class="field "><img src="" alt="" class="field-two"></div>
+                            <div class="field "><img src="" alt="" class="field-three"></div>
+                            <div class="field "><img src="" alt="" class="field-four"></div>
+                            <div class="field "><img src="" alt="" class="field-five"></div>
+                            <div class="field "><img src="" alt="" class="field-six"></div>
+                            <div class="field "><img src="" alt="" class="field-seven"></div>
+                            <div class="field "><img src="" alt="" class="field-eight"></div>
+                            <div class="field "><img src="" alt="" class="field-nine"></div>
                         </div>
                         <p class="card-text-recipes"></p>
                     </div>
